--- a/Client/app/build.gradle
+++ b/Client/app/build.gradle
@@ -9,17 +9,11 @@ android {
         def Properties versionProps = new Properties()
         versionProps.load(new FileInputStream(versionPropsFile))
 
-        def value = 0
-        def runTasks = gradle.startParameter.taskNames
-        if ('assemble' in runTasks || 'assembleRelease' in runTasks || 'aR' in runTasks) {
-            value = 1;
-        }
-
         def versionMajor = 0
         def versionMinor = 3
-        def versionPatch = versionProps['VERSION_PATCH'].toInteger() + value // Release 할 때만 증가
+        def versionPatch = 0
         def versionBuild = versionProps['VERSION_BUILD'].toInteger() + 1 // Debug, Release 상관없이 무조건 증가
-        def versionNumber = versionProps['VERSION_NUMBER'].toInteger() + value
+        def versionNumber = 2                                               // Release시 증가
 
         versionProps['VERSION_PATCH'] = versionPatch.toString()
         versionProps['VERSION_BUILD'] = versionBuild.toString()
